# feature-discovery

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py  schemas.py
app/services/: llm.py  scraper.py
scripts/: seed_data.py  test_api.py  test_import.py
